Fix like button visible over sidenav

--- a/app/webpack/styles/modules/sidenav.scss
+++ b/app/webpack/styles/modules/sidenav.scss
@@ -6,7 +6,7 @@ $sidenav-width: 250px;
   top: 0;
   right: 0;
   bottom: -56px; // to avoid gap when android chrome addressbar closes
-  z-index: 1;
+  z-index: 2;
   width: 0;
   padding-top: 15vh;
   overflow: hidden;
